fix id icon alignment in r to l layout

--- a/orcid-web/src/main/webapp/static/css/noto-font.css
+++ b/orcid-web/src/main/webapp/static/css/noto-font.css
@@ -92,6 +92,10 @@ h4 {
     font-size: 13px;
 }
 
+.lang-rl .orcid-id-https {
+    font-size: 11px;
+}
+
 .orcid-id-https {
     font-size: 12px;
 }
